--- a/monad-mock.cabal
+++ b/monad-mock.cabal
@@ -64,7 +64,8 @@ library
     , haskell-src-meta
     , monad-control >=1.0.0.0 && <2
     , mtl
-    , template-haskell >=2.10.0.0 && <2.19
+    -- 2.21 (GHC 9.8) has type errors
+    , template-haskell >=2.10.0.0 && <2.21
     , th-orphans
     , transformers-base
   if impl(ghc < 8)
@@ -99,4 +100,6 @@ test-suite monad-stub-test-suite
     , hspec
     , monad-mock
     , mtl
+  build-tool-depends:
+      hspec-discover:hspec-discover
   default-language: Haskell2010
